--- a/style.css
+++ b/style.css
@@ -136,9 +136,14 @@ footer{
 }
 
 .project-img-showcase{
-    object-fit: cover;
     text-align: center;
+}
 
+.project-img-showcase img{
+    max-width: 900px;
+    height: auto;
+    object-fit: contain;
+    
 }
 
 .project-body{
@@ -164,7 +169,7 @@ footer{
     max-width: 100%;
     height: 225px;
     pointer-events: none;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .color-text{
